--- a/bookmap/templates/realmap.html
+++ b/bookmap/templates/realmap.html
@@ -60,6 +60,8 @@
             <div class="seetheme"><a href="{% url 'themamap' %}">테마</a></div>
         </div>
 
+        <button onclick="current();">현재위치</button>
+
         <div id="list" class="list">
         <table class="table">
             <thead>
@@ -106,20 +108,25 @@
     var imageSrc = 'https://myrealdomain.com/images/my-icon-5.png', // 마커이미지의 주소입니다    
         imageSize = new kakao.maps.Size(35, 37); // 마커이미지의 크기입니다
     var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
-    if(navigator.geolocation){
-        navigator.geolocation.getCurrentPosition(function(position){
-            lat=position.coords.latitude;
-            lon=position.coords.longitude;
-            var locPosition=new kakao.maps.LatLng(lat,lon);
-            let marker = new kakao.maps.Marker({
-                    map: map,
-                    position: locPosition,
-                    clickable: false,
-                    title: '현재위치',
-                    image: markerImage
+    function current(){
+        if(navigator.geolocation){
+            navigator.geolocation.getCurrentPosition(function(position){
+                lat=position.coords.latitude;
+                lon=position.coords.longitude;
+                var locPosition=new kakao.maps.LatLng(lat,lon);
+                let marker = new kakao.maps.Marker({
+                        map: map,
+                        position: locPosition,
+                        clickable: false,
+                        title: '현재위치',
+                        image: markerImage
+                });
+                map.setCenter(locPosition);
+                map.setLevel(7,{animate: true});
             });
-        });
-    };
+        };
+    }
+
     function addrStoN(address,title,i){ //주소를 위도경도로 변환후 마킹
         geocoder.addressSearch(address,function(result, status){
             if (status === kakao.maps.services.Status.OK){
