--- a/bookmap/templates/storedetail.html
+++ b/bookmap/templates/storedetail.html
@@ -99,6 +99,9 @@
         </tr>
         {% endif %}
     </table>
+    {% if user.is_authenticated %}
+        <button onclick="get_stamp();">도장찍기</button>
+    {% endif %}
 </div>
 
 
@@ -138,8 +141,33 @@
     var map = new kakao.maps.Map(mapContainer, mapOption); 
     var geocoder = new kakao.maps.services.Geocoder();
     map.setZoomable(true);
-    let addr = document.getElementById('addr').innerHTML;
+    var addr = document.getElementById('addr').innerHTML;
     let name = document.getElementById('name').innerHTML;
+
+    function get_stamp(){
+        if(navigator.geolocation){
+            navigator.geolocation.getCurrentPosition(function(position){
+                lat=position.coords.latitude;
+                lon=position.coords.longitude;
+                let loc1=new kakao.maps.LatLng(lat-0.0005,lon-0.0005);
+                let loc2=new kakao.maps.LatLng(lat+0.0005,lon+0.0005);
+                var stamp_bounds = new kakao.maps.LatLngBounds(loc1, loc2);
+                geocoder.addressSearch(addr,function(result, status){
+                    if (status === kakao.maps.services.Status.OK){
+                        let coords = new kakao.maps.LatLng(result[0].y,result[0].x);
+                        if (stamp_bounds.contain(coords)){
+                            location.href="{%url 'stamp' store.bookstore_id %}";
+                            alert("스탬프 1개 적립 완료!");
+                        }
+                        else{
+                            alert("책방 근처로 가주세요!");
+                        }
+                    };
+
+                });
+            });
+        }
+    };
 
     function addrStoN(address,title){ //주소를 위도경도로 변환후 마킹
         geocoder.addressSearch(address,function(result, status){
